--- a/resource/template/detail.html
+++ b/resource/template/detail.html
@@ -21,7 +21,7 @@
     <meta property="og:title" content="ChatGPT" />
     <meta
       property="og:image"
-      content="https://chat.openai.com/images/chatgpt-share-og.png"
+      content="/images/chatgpt-share-og.png"
     />
     <meta property="og:url" content="https://chat.openai.com" />
     <meta name="apple-itunes-app" content="app-id=6448311069" />
@@ -32,36 +32,36 @@
     <link rel="preconnect" href="https://cdn.openai.com" />
     <link
       rel="preload"
-      href="https://cdn.openai.com/common/fonts/soehne/soehne-buch.woff2"
+      href="/fonts/soehne/soehne-buch.woff2"
       as="font"
       crossorigin=""
     />
     <link
       rel="preload"
-      href="https://cdn.openai.com/common/fonts/soehne/soehne-halbfett.woff2"
+      href="/fonts/soehne/soehne-halbfett.woff2"
       as="font"
       crossorigin=""
     />
     <link
       rel="preload"
-      href="https://cdn.openai.com/common/fonts/soehne/soehne-mono-buch.woff2"
+      href="/fonts/soehne/soehne-mono-buch.woff2"
       as="font"
       crossorigin=""
     />
     <link
       rel="preload"
-      href="https://cdn.openai.com/common/fonts/soehne/soehne-mono-halbfett.woff2"
+      href="/fonts/soehne/soehne-mono-halbfett.woff2"
       as="font"
       crossorigin=""
     />
     <link
       rel="preload"
-      href="/_next/static/css/c8a4ec226dd6b8e1.css"
+      href="/_next/static/css/2639acab19a371b1.css"
       as="style"
     />
     <link
       rel="stylesheet"
-      href="/_next/static/css/c8a4ec226dd6b8e1.css"
+      href="/_next/static/css/2639acab19a371b1.css"
       data-n-g=""
     />
     <noscript data-n-css=""></noscript>
@@ -71,31 +71,91 @@
       src="/_next/static/chunks/polyfills-c67a75d1b6f99dc8.js"
     ></script>
     <script
-      src="/_next/static/chunks/webpack-ebbb6fe12690a0cf.js"
+      src="/_next/static/chunks/webpack-9e1ebc95eb273260.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/framework-e23f030857e925d4.js"
+      src="/_next/static/chunks/framework-10a404587b40544b.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/main-0438431c68fbeb27.js"
+      src="/_next/static/chunks/main-664b20fa39df3103.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/pages/_app-1fb29c81a8f25dfc.js"
+      src="/_next/static/chunks/pages/_app-d78f57764d11b9a7.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/pages/c/%5BchatId%5D-85b6f58fb072e37b.js"
+      src="/_next/static/chunks/68a27ff6-f9f204be935e10d1.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/8TObkIccovI1-nluVgBpN/_buildManifest.js"
+      src="/_next/static/chunks/012ff928-385705181ba431e9.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/8TObkIccovI1-nluVgBpN/_ssgManifest.js"
+      src="/_next/static/chunks/2802bd5f-2db666e4606fc7ff.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/chunks/bd26816a-796eab5008811694.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/chunks/1f110208-24bf6c2e080e0308.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/chunks/8948-6595c46a7bd0d3d3.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/chunks/3504-a12ba7bcff4f7847.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/chunks/4984-2164c4b7cb3aea91.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/chunks/7483-2c0a5d1877c6da1d.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/chunks/3551-b3787b4957be36b0.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/chunks/4521-b0cabf35ae0d8690.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/chunks/6493-f95fb76654babf4a.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/chunks/1230-8f311937066d317d.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/chunks/8937-e8acc7b8fc475182.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/chunks/7851-f028dc8368e400ff.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/chunks/pages/%5B%5B...default%5D%5D-79b3a53618f07b71.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/oDTsXIohP85MnLZj7TlaB/_buildManifest.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/oDTsXIohP85MnLZj7TlaB/_ssgManifest.js"
       defer=""
     ></script>
   </head>
@@ -125,6 +185,50 @@
           } catch (e) {}
         })();
       </script>
+      <div class="overflow-hidden w-full h-full relative flex z-0">
+        <div class="relative flex h-full max-w-full flex-1 overflow-hidden">
+          <div class="flex h-full max-w-full flex-1 flex-col">
+            <main
+              class="relative h-full w-full transition-width flex flex-col overflow-auto items-stretch flex-1"
+            >
+              <div class="flex-1 overflow-hidden"></div>
+              <div
+                class="absolute bottom-0 left-0 w-full border-t md:border-t-0 dark:border-white/20 md:border-transparent md:dark:border-transparent md:bg-vert-light-gradient bg-white dark:bg-gray-800 md:!bg-transparent dark:md:bg-vert-dark-gradient pt-2 md:pl-2 md:w-[calc(100%-.5rem)]"
+              >
+                <div
+                  class="pb-3 pt-2 text-center text-xs text-gray-600 dark:text-gray-300 md:px-[60px] md:pb-6 md:pt-3"
+                >
+                  <span
+                    >Free Research Preview. ChatGPT may produce inaccurate
+                    information about people, places, or facts.
+                    <a
+                      href="https://help.openai.com/en/articles/6825453-chatgpt-release-notes"
+                      target="_blank"
+                      rel="noreferrer"
+                      class="underline"
+                      >ChatGPT August 3 Version</a
+                    ></span
+                  >
+                </div>
+                <div
+                  class="group absolute bottom-5 right-4 z-10 flex flex-row items-center gap-3"
+                ></div>
+              </div>
+            </main>
+          </div>
+        </div>
+      </div>
+      <div
+        role="region"
+        aria-label="Notifications (F8)"
+        tabindex="-1"
+        style="pointer-events: none"
+      >
+        <ol
+          tabindex="-1"
+          class="z-100 fixed bottom-0 right-0 m-0 flex max-w-[100vw] list-none flex-col gap-[10px] p-[var(--viewport-padding)] outline-none [--viewport-padding:_25px]"
+        ></ol>
+      </div>
       <div class="absolute left-0 right-0 top-0 z-[2]"></div>
     </div>
     <script id="__NEXT_DATA__" type="application/json">
