--- a/resource/template/detail.html
+++ b/resource/template/detail.html
@@ -21,7 +21,7 @@
     <meta property="og:title" content="ChatGPT" />
     <meta
       property="og:image"
-      content="/images/chatgpt-share-og.png"
+      content="https://chat.openai.com/images/chatgpt-share-og.png"
     />
     <meta property="og:url" content="https://chat.openai.com" />
     <meta name="apple-itunes-app" content="app-id=6448311069" />
@@ -56,12 +56,12 @@
     />
     <link
       rel="preload"
-      href="/_next/static/css/2639acab19a371b1.css"
+      href="/_next/static/css/9220ce29fc943760.css"
       as="style"
     />
     <link
       rel="stylesheet"
-      href="/_next/static/css/2639acab19a371b1.css"
+      href="/_next/static/css/9220ce29fc943760.css"
       data-n-g=""
     />
     <noscript data-n-css=""></noscript>
@@ -71,7 +71,7 @@
       src="/_next/static/chunks/polyfills-c67a75d1b6f99dc8.js"
     ></script>
     <script
-      src="/_next/static/chunks/webpack-9e1ebc95eb273260.js"
+      src="/_next/static/chunks/webpack-24d9ef039d1fd80b.js"
       defer=""
     ></script>
     <script
@@ -79,27 +79,19 @@
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/main-664b20fa39df3103.js"
+      src="/_next/static/chunks/main-989cac6f6309d951.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/pages/_app-d78f57764d11b9a7.js"
+      src="/_next/static/chunks/pages/_app-2989be8ef1597e54.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/68a27ff6-f9f204be935e10d1.js"
+      src="/_next/static/chunks/bd26816a-537855338b714f81.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/012ff928-385705181ba431e9.js"
-      defer=""
-    ></script>
-    <script
-      src="/_next/static/chunks/2802bd5f-2db666e4606fc7ff.js"
-      defer=""
-    ></script>
-    <script
-      src="/_next/static/chunks/bd26816a-796eab5008811694.js"
+      src="/_next/static/chunks/6199c948-28b15521c4eb1cf7.js"
       defer=""
     ></script>
     <script
@@ -107,55 +99,59 @@
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/8948-6595c46a7bd0d3d3.js"
+      src="/_next/static/chunks/2104-09304abac0293deb.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/3504-a12ba7bcff4f7847.js"
+      src="/_next/static/chunks/1438-8d1de903270120c8.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/4984-2164c4b7cb3aea91.js"
+      src="/_next/static/chunks/7985-7419f0f46b18b9d5.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/7483-2c0a5d1877c6da1d.js"
+      src="/_next/static/chunks/4137-447db6c53ca8543c.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/3551-b3787b4957be36b0.js"
+      src="/_next/static/chunks/9441-b93d2e2ad8e95779.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/4521-b0cabf35ae0d8690.js"
+      src="/_next/static/chunks/2277-cd6dd49e1a17aa80.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/6493-f95fb76654babf4a.js"
+      src="/_next/static/chunks/8937-483f483554794c10.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/1230-8f311937066d317d.js"
+      src="/_next/static/chunks/5342-355a5debcf5275e5.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/8937-e8acc7b8fc475182.js"
+      src="/_next/static/chunks/5408-1967e2057efbeefd.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/7851-f028dc8368e400ff.js"
+      src="/_next/static/chunks/8873-bb9dc83ce1bf199a.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/pages/%5B%5B...default%5D%5D-79b3a53618f07b71.js"
+      src="/_next/static/chunks/9119-022dacb142e95d2f.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/oDTsXIohP85MnLZj7TlaB/_buildManifest.js"
+      src="/_next/static/chunks/pages/%5B%5B...default%5D%5D-8e79734fa9414660.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/oDTsXIohP85MnLZj7TlaB/_ssgManifest.js"
+      src="/_next/static/cdCfIN9NUpAX8XOZwcgjh/_buildManifest.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/cdCfIN9NUpAX8XOZwcgjh/_ssgManifest.js"
       defer=""
     ></script>
   </head>
@@ -189,50 +185,44 @@
         <div class="relative flex h-full max-w-full flex-1 overflow-hidden">
           <div class="flex h-full max-w-full flex-1 flex-col">
             <main
-              class="relative h-full w-full transition-width flex flex-col overflow-auto items-stretch flex-1"
+              class="relative h-full w-full transition-width overflow-auto flex-1"
             >
-              <div class="flex-1 overflow-hidden"></div>
-              <div
-                class="absolute bottom-0 left-0 w-full border-t md:border-t-0 dark:border-white/20 md:border-transparent md:dark:border-transparent md:bg-vert-light-gradient bg-white dark:bg-gray-800 md:!bg-transparent dark:md:bg-vert-dark-gradient pt-2 md:pl-2 md:w-[calc(100%-.5rem)]"
-              >
+              <div role="presentation" class="flex h-full">
+                <div class="flex-1 overflow-hidden"></div>
                 <div
-                  class="pb-3 pt-2 text-center text-xs text-gray-600 dark:text-gray-300 md:px-[60px] md:pb-6 md:pt-3"
+                  class="absolute bottom-0 left-0 w-full border-t md:border-t-0 dark:border-white/20 md:border-transparent md:dark:border-transparent md:bg-vert-light-gradient bg-white dark:bg-gray-800 md:!bg-transparent dark:md:bg-vert-dark-gradient pt-2 md:pl-2 md:w-[calc(100%-.5rem)]"
                 >
-                  <span
-                    >Free Research Preview. ChatGPT may produce inaccurate
-                    information about people, places, or facts.
-                    <a
-                      href="https://help.openai.com/en/articles/6825453-chatgpt-release-notes"
-                      target="_blank"
-                      rel="noreferrer"
-                      class="underline"
-                      >ChatGPT August 3 Version</a
-                    ></span
+                  <div
+                    class="relative py-2 text-center text-xs text-gray-600 dark:text-gray-300 md:px-[60px]"
                   >
+                    <span
+                      >Free Research Preview. ChatGPT may produce inaccurate
+                      information about people, places, or facts.
+                      <a
+                        href="https://help.openai.com/en/articles/6825453-chatgpt-release-notes"
+                        target="_blank"
+                        rel="noreferrer"
+                        class="underline"
+                        >ChatGPT September 25 Version</a
+                      ></span
+                    >
+                  </div>
                 </div>
-                <div
-                  class="group absolute bottom-5 right-4 z-10 flex flex-row items-center gap-3"
-                ></div>
+              </div>
+              <div
+                class="group fixed bottom-5 right-4 z-10 flex flex-row items-center gap-3"
+              >
+                <div class="hidden md:block"></div>
               </div>
             </main>
           </div>
         </div>
-      </div>
-      <div
-        role="region"
-        aria-label="Notifications (F8)"
-        tabindex="-1"
-        style="pointer-events: none"
-      >
-        <ol
-          tabindex="-1"
-          class="z-100 fixed bottom-0 right-0 m-0 flex max-w-[100vw] list-none flex-col gap-[10px] p-[var(--viewport-padding)] outline-none [--viewport-padding:_25px]"
-        ></ol>
       </div>
       <div class="absolute left-0 right-0 top-0 z-[2]"></div>
     </div>
     <script id="__NEXT_DATA__" type="application/json">
 {{.props}}
     </script>
+
   </body>
 </html>
