--- a/resource/template/chat.html
+++ b/resource/template/chat.html
@@ -3,6 +3,24 @@
   <head>
     <meta charset="utf-8" />
     <title>ChatGPT</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/_next/static/media/apple-touch-icon.59f2e898.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/_next/static/media/favicon-32x32.be48395e.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/_next/static/media/favicon-16x16.9b8dbb69.png"
+    />
+    <link rel="preconnect" href="" />
     <meta
       name="title"
       content="ChatGPT: Get instant answers, find inspiration, learn something new"
@@ -21,57 +39,57 @@
     <meta property="og:title" content="ChatGPT" />
     <meta
       property="og:image"
-      content="https://chat.openai.com/images/chatgpt-share-og.png"
+      content="/_next/static/media/chatgpt-share-og.49cbbffe.png"
     />
     <meta property="og:url" content="https://chat.openai.com" />
     <meta name="apple-itunes-app" content="app-id=6448311069" />
-    <meta name="next-head-count" content="12" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="preconnect" href="" />
+    <meta name="next-head-count" content="16" />
     <link
       rel="preload"
-      href="/fonts/soehne/soehne-buch.woff2"
+      href="/_next/static/media/soehne-buch.13189857.woff2"
       as="font"
       crossorigin=""
     />
     <link
       rel="preload"
-      href="/fonts/soehne/soehne-halbfett.woff2"
+      href="/_next/static/media/soehne-halbfett.977f1845.woff2"
       as="font"
       crossorigin=""
     />
     <link
       rel="preload"
-      href="/fonts/soehne/soehne-mono-buch.woff2"
+      href="/_next/static/media/soehne-mono-buch.de677af1.woff2"
       as="font"
       crossorigin=""
     />
     <link
       rel="preload"
-      href="/fonts/soehne/soehne-mono-halbfett.woff2"
+      href="/_next/static/media/soehne-mono-halbfett.b082e8e2.woff2"
       as="font"
       crossorigin=""
     />
+    <link data-next-font="" rel="preconnect" href="/" crossorigin="anonymous" />
     <link
       rel="preload"
-      href="/_next/static/css/9220ce29fc943760.css"
+      href="/_next/static/css/72ac055a97f100ed.css"
       as="style"
     />
     <link
       rel="stylesheet"
-      href="/_next/static/css/9220ce29fc943760.css"
+      href="/_next/static/css/72ac055a97f100ed.css"
       data-n-g=""
     />
     <noscript data-n-css=""></noscript>
+    <script>
+      window.__arkoseUrl="{{.arkoseUrl}}";
+    </script>
     <script
       defer=""
       nomodule=""
       src="/_next/static/chunks/polyfills-c67a75d1b6f99dc8.js"
     ></script>
     <script
-      src="/_next/static/chunks/webpack-24d9ef039d1fd80b.js"
+      src="/_next/static/chunks/webpack-c78c22f748b04653.js"
       defer=""
     ></script>
     <script
@@ -79,11 +97,11 @@
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/main-989cac6f6309d951.js"
+      src="/_next/static/chunks/main-83168d34288a00b7.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/pages/_app-2989be8ef1597e54.js"
+      src="/_next/static/chunks/pages/_app-70f1f736a705489e.js"
       defer=""
     ></script>
     <script
@@ -99,7 +117,7 @@
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/2104-09304abac0293deb.js"
+      src="/_next/static/chunks/8097-f88ce82b540bbc8b.js"
       defer=""
     ></script>
     <script
@@ -107,11 +125,11 @@
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/7985-7419f0f46b18b9d5.js"
+      src="/_next/static/chunks/1294-dbeece617dfff4de.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/4137-447db6c53ca8543c.js"
+      src="/_next/static/chunks/4417-391a60ae773202e0.js"
       defer=""
     ></script>
     <script
@@ -119,39 +137,43 @@
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/2277-cd6dd49e1a17aa80.js"
+      src="/_next/static/chunks/6823-3260b0b91f7ca3d0.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/8937-483f483554794c10.js"
+      src="/_next/static/chunks/5526-035f6fefd0fb94f8.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/5342-355a5debcf5275e5.js"
+      src="/_next/static/chunks/2445-4f16d0569085581c.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/5408-1967e2057efbeefd.js"
+      src="/_next/static/chunks/9279-45f3f408543377c5.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/8873-bb9dc83ce1bf199a.js"
+      src="/_next/static/chunks/9941-3387be275ded2f3d.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/9119-022dacb142e95d2f.js"
+      src="/_next/static/chunks/1522-11fee5103d6e3245.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/chunks/pages/%5B%5B...default%5D%5D-8e79734fa9414660.js"
+      src="/_next/static/chunks/9071-64591ee2b071de74.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/cdCfIN9NUpAX8XOZwcgjh/_buildManifest.js"
+      src="/_next/static/chunks/pages/%5B%5B...default%5D%5D-0a269d6aac76f42a.js"
       defer=""
     ></script>
     <script
-      src="/_next/static/cdCfIN9NUpAX8XOZwcgjh/_ssgManifest.js"
+      src="/_next/static/DxhyfP3OR5HFF69ve_LJq/_buildManifest.js"
+      defer=""
+    ></script>
+    <script
+      src="/_next/static/DxhyfP3OR5HFF69ve_LJq/_ssgManifest.js"
       defer=""
     ></script>
   </head>
@@ -181,66 +203,45 @@
           } catch (e) {}
         })();
       </script>
-      <div class="overflow-hidden w-full h-full relative flex z-0">
-        <div class="relative flex h-full max-w-full flex-1 overflow-hidden">
-          <div class="flex h-full max-w-full flex-1 flex-col">
-            <main
-              class="relative h-full w-full transition-width overflow-auto flex-1"
-            >
-              <div role="presentation" class="flex h-full">
-                <div class="flex-1 overflow-hidden"></div>
+      <div class="relative z-0 flex h-full w-full overflow-hidden">
+        <div
+          class="relative flex h-full max-w-full flex-1 flex-col overflow-hidden"
+        >
+          <main
+            class="relative h-full w-full flex-1 overflow-auto transition-width"
+          >
+            <div role="presentation" class="flex h-full flex-col">
+              <div class="flex-1 overflow-hidden"></div>
+              <div
+                class="w-full pt-2 md:pt-0 border-t md:border-t-0 dark:border-white/20 md:border-transparent md:dark:border-transparent md:pl-2 gizmo:pl-0 gizmo:md:pl-0 md:w-[calc(100%-.5rem)] absolute bottom-0 left-0 md:bg-vert-light-gradient bg-white dark:bg-gray-800 md:!bg-transparent dark:md:bg-vert-dark-gradient"
+              >
                 <div
-                  class="absolute bottom-0 left-0 w-full border-t md:border-t-0 dark:border-white/20 md:border-transparent md:dark:border-transparent md:bg-vert-light-gradient bg-white dark:bg-gray-800 md:!bg-transparent dark:md:bg-vert-dark-gradient pt-2 md:pl-2 md:w-[calc(100%-.5rem)]"
+                  class="relative px-2 py-2 text-center text-xs text-gray-600 dark:text-gray-300 md:px-[60px]"
                 >
-                  <div
-                    class="relative py-2 text-center text-xs text-gray-600 dark:text-gray-300 md:px-[60px]"
+                  <span
+                    >Free Research Preview. ChatGPT may produce inaccurate
+                    information about people, places, or facts.
+                    <a
+                      href="https://help.openai.com/en/articles/6825453-chatgpt-release-notes"
+                      target="_blank"
+                      rel="noreferrer"
+                      class="underline"
+                      >ChatGPT September 25 Version</a
+                    ></span
                   >
-                    <span
-                      >Free Research Preview. ChatGPT may produce inaccurate
-                      information about people, places, or facts.
-                      <a
-                        href="https://help.openai.com/en/articles/6825453-chatgpt-release-notes"
-                        target="_blank"
-                        rel="noreferrer"
-                        class="underline"
-                        >ChatGPT September 25 Version</a
-                      ></span
-                    >
-                  </div>
                 </div>
               </div>
-              <div
-                class="group fixed bottom-5 right-4 z-10 flex flex-row items-center gap-3"
-              >
-                <div class="hidden md:block"></div>
-              </div>
-            </main>
-          </div>
+            </div>
+            <div
+              class="group fixed bottom-3 right-3 z-10 hidden gap-1 lg:flex"
+            ></div>
+          </main>
         </div>
       </div>
       <div class="absolute left-0 right-0 top-0 z-[2]"></div>
     </div>
     <script id="__NEXT_DATA__" type="application/json">
-      {{.props}}
-    </script>
-    <script>
-      if ("serviceWorker" in navigator) {
-        window.addEventListener("load", function () {
-          navigator.serviceWorker
-            .register("/service-worker.js", { scope: "/" })
-            .then(
-              function (reg) {
-                console.log(
-                  "ServiceWorker registration successful with scope: ",
-                  reg.scope
-                );
-              },
-              function (e) {
-                console.log("ServiceWorker registration failed: ", e);
-              }
-            );
-        });
-      }
+{{.props}}
     </script>
   </body>
 </html>
